--- a/cadastro-pessoa/pom.xml
+++ b/cadastro-pessoa/pom.xml
@@ -17,7 +17,7 @@
 	<properties>
 		<java.version>11</java.version>
 		<spring-cloud.version>Hoxton.SR6</spring-cloud.version>
-		<restassured>4.3.1</restassured>
+		<restassured>3.3.0</restassured>
 	</properties>
 
 	<dependencies>
@@ -78,6 +78,17 @@
 			<groupId>io.rest-assured</groupId>
 			<artifactId>spring-web-test-client</artifactId>
 			<version>${restassured}</version>
+		</dependency>
+		<dependency>
+			<groupId>br.com.six2six</groupId>
+			<artifactId>fixture-factory</artifactId>
+			<version>3.1.0</version>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>com.google.code.gson</groupId>
+			<artifactId>gson</artifactId>
+			<version>2.8.6</version>
 		</dependency>
 
 		<dependency>
